Changed squadron stores for F16 and F5

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Add-On Korea 80s/Campaign/Auto Save.iff
 Add-On Korea 80s/Campaign/Auto Save.twx
 Add-On Korea 80s/Campaign/tmp.frc
 Add-On Korea 80s/Campaign/tmp.his
+Add-On Korea 80s/Campaign/Auto Save.fmap
