--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ Add-On Korea 80s/Campaign/Auto Save.twx
 Add-On Korea 80s/Campaign/tmp.frc
 Add-On Korea 80s/Campaign/tmp.his
 Add-On Korea 80s/Campaign/Auto Save.fmap
+Add-On Korea 80s/Campaign/Fire.twx
+Add-On Korea 80s/Campaign/Fire.ini
+Add-On Korea 80s/Campaign/Fire.iff
+Add-On Korea 80s/Campaign/Fire.his
+Add-On Korea 80s/Campaign/Fire.frc
+Add-On Korea 80s/Campaign/Fire.fmap
+Add-On Korea 80s/Campaign/Fire.cam
