--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Add-On Korea 80s/Campaign/Fire.his
 Add-On Korea 80s/Campaign/Fire.frc
 Add-On Korea 80s/Campaign/Fire.fmap
 Add-On Korea 80s/Campaign/Fire.cam
+Add-On Korea 80s/Campaign/Auto Save.ini
